--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "nuxt.isNuxtApp": false
+  "nuxt.isNuxtApp": false,
+  "i18n-ally.localesPaths": [
+    "packages/cool-web/locales",
+    "packages/cool-web/public/locales"
+  ],
+  "i18n-ally.keystyle": "nested",
+  "react-i18n.i18nPaths": "packages/cool-web/public/locales,dist/packages/cool-web/exported/locales,dist/packages/cool-web/public/locales"
 }
