--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nx/workspace": "16.5.5",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.197",
     "@types/node": "18.14.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -45,9 +46,15 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.16.1",
+    "antd": "^5.8.2",
+    "i18next": "^23.4.2",
+    "lodash": "^4.17.21",
     "next": "13.4.1",
+    "next-i18next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.3",
     "tslib": "^2.3.0"
   },
   "resolutions": {
